# vj-visualizer

./: Cargo.toml  cspell.json  flake.nix
assets/: audiolink-old.wgsl  audiolink.wgsl  logo.wgsl  visualizer.wgsl
src/: audiolink.rs  logo.rs  main.rs  pipewire.rs  visualizer.rs
src/audiolink/: mod.rs  types.rs
